--- a/FlightSearch/FlightSearchNLP/pom.xml
+++ b/FlightSearch/FlightSearchNLP/pom.xml
@@ -5,7 +5,8 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   
-  
+     <!-- Test changes-->
+
    <dependencies>
    <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
 <dependency>
@@ -13,12 +14,13 @@
     <artifactId>commons-codec</artifactId>
     <version>1.9</version>
 </dependency>
-   <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+   <!-- https://mvnrepository.com/artifact/commons-io/commons-io te -->
 <dependency>
     <groupId>commons-io</groupId>
     <artifactId>commons-io</artifactId>
     <version>2.6</version>
 </dependency>
+
    
   <dependency>
             <groupId>com.google.cloud</groupId>
