--- a/FlightSearch/FlightSearchNLP/pom.xml
+++ b/FlightSearch/FlightSearchNLP/pom.xml
@@ -3,7 +3,7 @@
   <groupId>FlightSearchNLP</groupId>
   <artifactId>FlightSearchNLP</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
   
      <!-- Test changes-->
 
